--- a/styles/header.css
+++ b/styles/header.css
@@ -98,7 +98,6 @@ nav .dropdown-button.active button i {
 /* Search bar
 -------------------------------*/
 header .search {
-	margin: 1rem 0;
 }
 
 header .search form {
